nginx/demo/demo-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: kuar
  namespace: default
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8080
  selector:
    app: kuar
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kuar
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuar
  template:
    metadata:
      labels:
        app: kuar
    spec:
      containers:
      - name: kuar
        image: gcr.io/kuar-demo/kuard-amd64:1
        ports:
        - containerPort: 8080
