nginx/demo/demo-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuar-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: kuar-k8s-192-168-11-210.sslip.io
    http:
      paths:
      - backend:
          serviceName: kuar
          servicePort: 8080
